# nightshift

./: .gitignore  CITATION.cff  LICENSE  README.md  bmrb_shifts.py  plot_output.py  requirements.txt  setup.cfg
nightshift/: __init__.py  __main__.py  bmrb.py  cli.py  constants.py  fileio.py  nightshift.py  plotting.py  selector.py
