[metadata]
name = nightshift
version = 0.0.1
author = Ian Fucci
author_email = fucci.ian@gmail.com
description =
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ianfucci/nightshift
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
keywords = nmr, chemical shift, bmrb, plotting

[options]
packages = nightshift
install_requires =
    requests
    matplotlib>=3.0
python_requires = >=3.6

[options.entry_points]
console_scripts =
    nightshift = nightshift.nightshift:run_cli