[metadata]
name = nightshift
version = 0.1.0
author = Ian Fucci
author_email = fucci.ian@gmail.com
description = A python library and command line program for plotting simulated 2D and 3D NMR spectra from assigned chemical shifts from the BMRB
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ianfucci/nightshift
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
keywords = nmr, chemical shift, bmrb, plotting

[options]
packages = nightshift
install_requires =
    requests
    matplotlib
python_requires = >=3.6

[options.entry_points]
console_scripts =
    nightshift = nightshift.nightshift:main
